[package]
name = "client"
version = "0.1.0"
authors = ["neetdai <974498346@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.0.1"
async-native-tls = "0.3.3"
thiserror = "1.0.20"
protocol = {git = "https://github.com/lizard-message/protocol"}
futures = "0.3.7"
bytes = "0.5.6"

[dev-dependencies]
smol = "1.0.1"
futures = "0.3.7"
